--- a/backend/src/main/webapp/app/views/kitchen/search.html
+++ b/backend/src/main/webapp/app/views/kitchen/search.html
@@ -75,11 +75,11 @@
 						    		<i class="fa fa-home fa-fw" style="color: #EC971F;" ng-show="or.isTakeHome"></i>
 						    		<ul>
 						    			<li ng-repeat="ors in or.subMenus"><em>{{ ors.name }}</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						    			<code class="text-muted small" ng-show="ors.amount"><em>{{'kichen.amount' | translate}} {{ ors.amount }}</em></code></li>
+						    			<code class="text-muted small" ng-show="ors.amount"><em><!-- {{'kichen.amount' | translate}} --># {{ ors.amount }}</em></code></li>
 						    		</ul>
 			    				</td>
 			    				<td style="text-align: right; vertical-align: top;">
-			    					<code class="pull-right text-muted small">{{'kichen.amount' | translate}} {{ or.amount }}</code>
+			    					<code class="pull-right text-muted small"><!-- {{'kichen.amount' | translate}} --># {{ or.amount }}</code>
 			    				</td>
 			    				<td rowspan="2" style="text-align: right;">
 			    					<input type="checkbox" checklist-model="checkOrderMenuDoingIds" checklist-value="or.id">
@@ -135,11 +135,11 @@
 						    		<i class="fa fa-home fa-fw" style="color: #EC971F;" ng-show="or.isTakeHome"></i>
 						    		<ul>
 						    			<li ng-repeat="ors in or.subMenus"><em>{{ ors.name }}</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						    			<code class="text-muted small" ng-show="ors.amount"><em>{{'kichen.amount' | translate}} {{ ors.amount }}</em></code></li>
+						    			<code class="text-muted small" ng-show="ors.amount"><em><!-- {{'kichen.amount' | translate}} --># {{ ors.amount }}</em></code></li>
 						    		</ul>
 			    				</td>
 			    				<td style="text-align: right; vertical-align: top;">
-			    					<code class="pull-right text-muted small">{{'kichen.amount' | translate}} {{ or.amount }}</code>
+			    					<code class="pull-right text-muted small"><!-- {{'kichen.amount' | translate}} --># {{ or.amount }}</code>
 			    				</td>
 			    				<td rowspan="2" style="text-align: right;">
 			    					<input type="checkbox" checklist-model="checkOrderMenuFinishedIds" checklist-value="or.id">
