--- a/backend/src/main/webapp/app/styles/sb-admin-2.css
+++ b/backend/src/main/webapp/app/styles/sb-admin-2.css
@@ -21,9 +21,11 @@ body {
 @media(min-width:768px) {
     #page-wrapper {
         position: inherit;
-        margin: 0 0 0 250px;
+        margin: 0 5px 0 5px;
         padding: 0 30px;
         border-left: 1px solid #e7e7e7;
+        border-right: 1px solid #e7e7e7;
+        border-bottom: 1px solid #e7e7e7;
     }
 }
 
