--- a/backend/src/main/webapp/app/views/receipt/search.html
+++ b/backend/src/main/webapp/app/views/receipt/search.html
@@ -5,13 +5,29 @@
 		
 			<div class="form-group">
 				<div class="input-group">
-					<input type="text" placeholder="วันที่สร้าง" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
+					<input type="text" placeholder="ตั้งแต่วันที่" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
 						current-text="{{'datepicker.today' | translate}}"
 						clear-text="{{'datepicker.clear' | translate}}"
 						close-text="{{'datepicker.close' | translate}}"
+						ng-change="search()"
 						ng-model="$parent.formData.dateTimeStart" is-open="formData.openedStart"  /> 
 						<span class="input-group-btn">
 						<button type="button" class="btn btn-default" ng-click="openStart($event)">
+							<i class="glyphicon glyphicon-calendar"></i>
+						</button>
+					</span>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="input-group">
+					<input type="text" placeholder="ถึงวันที่" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
+						current-text="{{'datepicker.today' | translate}}"
+						clear-text="{{'datepicker.clear' | translate}}"
+						close-text="{{'datepicker.close' | translate}}"
+						ng-change="search()"
+						ng-model="$parent.formData.dateTimeEnd" is-open="formData.openedEnd"  /> 
+						<span class="input-group-btn">
+						<button type="button" class="btn btn-default" ng-click="openEnd($event)">
 							<i class="glyphicon glyphicon-calendar"></i>
 						</button>
 					</span>
