--- a/backend/src/main/webapp/app/views/receipt/add.html
+++ b/backend/src/main/webapp/app/views/receipt/add.html
@@ -1,52 +1,50 @@
 <div>
 	<div class="col-lg-6">
 		<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate>
-			<div class="form-inline" ng-hide="isEdit">
-				<label>{{'user.addpage.auto_gen' | translate}}</label>
-				<input type="checkbox" value="" ng-model="autoGen" ng-change="autoGenEvent()">
+			<div class="row">
+				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.sender.$invalid || existingUserShowErrMsg}">
+					<label class="control-label">ผู้ส่ง </label>
+					<input name="sender" class="form-control" ng-model="data.sender">
+				</div>
+				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.tel.$invalid || existingUserErrMsg}">
+					<label class="control-label">เบอร์โทร</label>
+					<input name="tel" class="form-control" ng-model="data.tel">
+				</div>
 			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.userNameShow.$invalid || existingUserShowErrMsg}">
-				<label class="control-label">{{'user.addpage.username_show' | translate}} *</label>
-				<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
-					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
-				</span>
-				<input name="userNameShow" class="form-control" ng-model="user.userNameShow" ng-change="existingUserShowErrMsg = null" ng-disabled="autoGen" required>
+			<div class="row">
+				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.receiver.$invalid || existingUserErrMsg}">
+					<label class="control-label">ผู้รับ *</label>
+					<input name="receiver" class="form-control" ng-model="data.receiver" required>
+				</div>
+				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.postDest.$invalid || existingUserErrMsg}">
+					<label class="control-label">ไปรษณีปลายทาง *</label>
+					<input name="postDest" class="form-control" ng-model="data.postDest" required>
+				</div>
 			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.userName.$invalid || existingUserErrMsg}">
-				<label class="control-label">{{'user.addpage.username' | translate}} *</label>
-				<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
-					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
-				</span>
-				<input name="userName" class="form-control" ng-model="user.userName" ng-change="existingUserErrMsg = null" ng-disabled="autoGen" required>
+		
+			<div class="form-group" ng-class="{'has-error':addUserForm.amount.$invalid || existingUserErrMsg}">
+				<label class="control-label">จำนวนเงิน *</label>
+				<input name="amount" type="number" class="form-control" ng-model="data.amount" required>
 			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.password.$invalid}">
-				<label class="control-label">{{'user.addpage.password' | translate}} *</label>
-				<input name="password" class="form-control" type="password" ng-model="user.password" ng-disabled="isEdit || autoGen" ng-required="!isEdit">
-				<p class="help-block" ng-show="autoGen">{{'user.addpage.generated_password_msg' | translate}} {{ user.password }}</p>
+			
+			<div class="row">
+				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.fee.$invalid || existingUserErrMsg}">
+					<label class="control-label">ค่าธรรมเนียม</label>
+					<input name="fee" type="number" class="form-control" ng-model="data.fee">
+				</div>
+				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.otherServicePrice.$invalid || existingUserErrMsg}">
+					<label class="control-label">ค่าบริการอื่นๆ</label>
+					<input name="otherServicePrice" type="number" class="form-control" ng-model="data.otherServicePrice">
+				</div>
 			</div>
-			<div class="form-group" ng-show="!autoGen" ng-class="{'has-error':addUserForm.repassword.$invalid || notMatchRepassErrMsg}">
-				<label class="control-label">{{'user.addpage.re_type_password' | translate}} *</label>
-				<span class="text-danger" ng-show="notMatchRepassErrMsg" style="position: absolute; right: 0px;">
-					<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
-				</span>
-				<input name="repassword" class="form-control" type="password" ng-model="user.reTypePassword" 
-				ng-change="notMatchRepassErrMsg = null" ng-disabled="isEdit" ng-required="!isEdit && !autoGen">
-			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.roles.$invalid}">
-				<label class="control-label">{{'user.addpage.role' | translate}} *</label>
-				<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
-					<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-			      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
-			      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
-			    </select>
-			</div>
-			<div class="form-group">
-                 <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
+			
+			<div class="form-group" ng-class="{'has-error':addUserForm.status.$invalid || existingUserErrMsg}">
+                 <label class="control-label">{{'user.addpage.status' | translate}} * &nbsp;&nbsp;</label>
                  <label class="radio-inline">
-                     <input type="radio" name="userStatus" value="1" ng-checked="user.enabled == 1" ng-model="user.enabled">{{'user.addpage.status.enable' | translate}}
+                     <input type="radio" name="status" value="0" ng-checked="user.enabled == 0" ng-model="user.enabled" required>กำลังดำเนินการ
                  </label>
                  <label class="radio-inline">
-                     <input type="radio" name="userStatus" value="0" ng-checked="user.enabled == 0" ng-model="user.enabled">{{'user.addpage.status.disable' | translate}}
+                     <input type="radio" name="status" value="1" ng-checked="user.enabled == 1" ng-model="user.enabled" required>เสร็จแล้ว
                  </label>
              </div>
 			<div style="text-align: center;">
