--- a/backend/src/main/webapp/app/views/receipt/search.html
+++ b/backend/src/main/webapp/app/views/receipt/search.html
@@ -89,7 +89,7 @@
 			<tbody>
 				<tr ng-repeat="u in data track by $index">
 					<td>{{ $index + 1 + ((formData.currentPage - 1) * itemsPerPage) }}</td>
-					<td>{{ u.createdDateTime | date : 'dd-MM-yyyy hh:MM:ss'}}</td>
+					<td>{{ u.createdDateTime | date : 'dd-MM-yyyy HH:mm:ss'}}</td>
 					<td>{{ u.docNo }}</td>
 					<td>{{ u.fee | number:2 }}</td>
 					<td>{{ u.otherServicePrice | number:2 }}</td>
