--- a/backend/src/main/webapp/app/views/receipt/receipt_type.html
+++ b/backend/src/main/webapp/app/views/receipt/receipt_type.html
@@ -1,10 +1,10 @@
 
 <div class="col-lg-6 col-lg-offset-3">
 	<div class="panel panel-danger" style="padding: 5px;">
-		<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="selectMenu(1)">ธนาณัติ EMS</button>
-		<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="selectMenu(2)">ชำระค่าบริการ</button>
-		<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="selectMenu(3)">ธนาณัติออนไลน์</button>
-		<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="selectMenu(4)">ชำระค่างวดรถยนต์</button>
-		<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="selectMenu(5)">โอนเงินเข้าบัญชีธนาคาร</button>
+		<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="selectMenu(1, $event)">ธนาณัติ EMS</button>
+		<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="selectMenu(2, $event)">ชำระค่าบริการ</button>
+		<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="selectMenu(3, $event)">ธนาณัติออนไลน์</button>
+		<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="selectMenu(4, $event)">ชำระค่างวดรถยนต์</button>
+		<button type="button" class="btn btn-danger btn-lg btn-block" ng-click="selectMenu(5, $event)">โอนเงินเข้าบัญชีธนาคาร</button>
 	</div>
 </div>
