--- a/backend/src/main/webapp/app/views/receipt/search.html
+++ b/backend/src/main/webapp/app/views/receipt/search.html
@@ -54,25 +54,27 @@
 			<thead>
 				<tr>
 					<th>#</th>
-					<th>{{'user.table.header.username_show' | translate}}</th>
-					<th>{{'user.table.header.username' | translate}}</th>
-					<th>{{'user.table.header.role' | translate}}</th>
-					<th>{{'user.table.header.status' | translate}}</th>
-					<th>{{'user.table.header.created_date' | translate}}</th>
+					<th>เลขที่</th>
+					<th>ค่าธรรมเนียม</th>
+					<th>ค่าบริการอื่นๆ</th>
+					<th>ค่าบริการ</th>
+					<th>วันที่สร้าง</th>
+					<th>สถานะ</th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="u in data.users track by $index">
+				<tr ng-repeat="u in data.serviceDatas track by $index">
 					<td>{{ $index + 1 + ((formData.currentPage - 1) * itemsPerPage) }}</td>
-					<td>{{ u.userNameShow }}</td>
-					<td>{{ u.userName }}</td>
-					<td>{{ u.roles[0].name }}</td>
+					<td>{{ u.docNo }}</td>
+					<td>{{ u.fee | number:2 }}</td>
+					<td>{{ u.otherServicePrice | number:2 }}</td>
+					<td>{{ u.servicePrice | number:2 }}</td>
+					<td>{{ u.createdDateTime | date : 'dd-MM-yyyy hh:MM:ss'}}</td>
 					<td>
-						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="u.enabled"></i>
-						<i class="fa  fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="u.enabled"></i>
+						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="u.status == 0"></i>
+						<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="u.status == 1"></i>
 					</td>
-					<td>{{ u.createdDateTime | date : 'dd-MM-yyyy'}}</td>
 					<td>
 						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteUser(u.id)"></i>&emsp;
 						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="editUser(u)"></i>
