--- a/backend/src/main/webapp/app/views/member_type/main.html
+++ b/backend/src/main/webapp/app/views/member_type/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">{{'user.header_title' | translate}}</h1>
+			<h1 class="page-header">ประเภทสมาชิก</h1>
 		</div>
 	</div>
 	
@@ -9,10 +9,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-users fa-fw"></i> {{ headerTitle }}
-                    <button type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px;" ng-click="gotoSelected()">
-                    	<i class="fa" ng-class="iconBtn"></i>
-                    </button>
+                    <i class="fa fa-users fa-fw"></i> แสดงประเภทสมาชิก
                 </div>
                 <div class="panel-body">
                 
