--- a/backend/src/main/webapp/app/views/position/main.html
+++ b/backend/src/main/webapp/app/views/position/main.html
@@ -19,39 +19,39 @@
 						<table class="table table-striped table-hover">
 							<thead>
 								<tr>
-									<th>ลำดับที่</th>
-									<th>ชื่อตำแหน่งงาน</th>
-									<th>สถานะ</th>
-									<th>Action</th>
+									<th width="10%">ลำดับที่</th>
+									<th width="30%">ชื่อตำแหน่งงาน</th>
+									<th width="20%">สถานะ</th>
+									<th width="40%">กระทำ</th>
 								</tr>
 							<thead>
 							<tbody>
-								<tr ng-repeat="user in users track by $index">
+								<tr ng-repeat="data in datas track by $index">
 									<td>{{ $index + 1 }}</td>
 									<td>
-										<span editable-text="user.name" e-name="name" e-form="rowform" onbeforesave="checkName($data)">
-											<span>{{ user.name }}</span>
+										<span e-class="form-control" editable-text="data.name" e-name="name" e-form="rowform" onbeforesave="checkValue($data)">
+											<span>{{ data.name }}</span>
 								        </span>
 									</td>
 									<td>
-										<span editable-radiolist="user.status" e-name="isEnabled" e-form="rowform">
-											<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="user.status == 0"></i>
-											<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="user.status == 1"></i>
+										<span editable-radiolist="data.status" e-name="status" e-form="rowform" e-ng-options="s.value as s.text for s in statuses">
+											<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data.status == 0"></i>
+											<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.status == 1"></i>
 								        </span>
 									</td>
 									<td style="white-space: nowrap">
 									
-										<form editable-form name="rowform" onbeforesave="saveMenuType($data, user, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == user">
-								          <button type="button" ng-disabled="rowform.$waiting" ng-click="user.id == null ? cancel($index) : rowform.$cancel()" class="btn btn-default">
-								            cancel
+										<form editable-form name="rowform" onbeforesave="saveItem($data, data, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == data">
+								          <button type="button" ng-disabled="rowform.$waiting" ng-click="data.id == null ? cancel($index) : rowform.$cancel()" class="btn btn-default">
+								            	ยกเลิก
 								          </button>
 								          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-primary">
-								            save
+								            	บันทึก
 								          </button>	
 								        </form>
 								        <div class="buttons" ng-show="!rowform.$visible">
-								          <button class="btn btn-danger" ng-click="removeMenuType($index, user)">del</button>
-								          <button class="btn btn-primary" ng-click="rowform.$show()">edit</button>
+								          <button class="btn btn-danger" ng-click="removeItem($index, data)">ลบ</button>
+								          <button class="btn btn-primary" ng-click="rowform.$show()">แก้ใข</button>
 								        </div>  
 									
 									</td>
@@ -59,7 +59,7 @@
 							</tbody>
 						</table>
 
-						<button class="btn btn-default" ng-click="addUser()">Add row</button>
+						<button class="btn btn-default" ng-click="addItem()">เพิ่มใหม่</button>
 					</div>
 
 
