--- a/backend/src/main/webapp/app/views/master_naming/main.html
+++ b/backend/src/main/webapp/app/views/master_naming/main.html
@@ -14,8 +14,30 @@
                 <div class="panel-body">
 
 
+					<div class="col-lg-12">
+						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
+							<form class="form-inline">
+							  <div class="form-group">
+							    <input type="text" class="form-control" placeholder="ชื่อตำแหน่งงาน" ng-model="criteria.position" ng-keyup="search()">
+							  </div>
+							  <div class="form-group">
+					                <label style="margin-left: 20px;">สถานะ &nbsp;&nbsp;</label>
+					                <label class="radio-inline">
+					                    <input type="radio" name="userStatus" value="1" ng-model="criteria.status" ng-change="search()">เปิด
+					                </label>
+					                <label class="radio-inline">
+					                    <input type="radio" name="userStatus" value="0" ng-model="criteria.status" ng-change="search()">ปิด
+					                </label>
+							   </div>
+							   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">ล้าง</button>
+							</form>
+						</div>
+					</div>
 
-					<div class="table-responsive">
+
+
+
+					<div class="table-responsive col-lg-12">
 						<table class="table table-striped table-hover">
 							<thead>
 								<tr>
