--- a/backend/src/main/webapp/app/views/master_naming/main.html
+++ b/backend/src/main/webapp/app/views/master_naming/main.html
@@ -13,29 +13,25 @@
                 </div>
                 <div class="panel-body">
 
-
 					<div class="col-lg-12">
 						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 							<form class="form-inline">
 							  <div class="form-group">
-							    <input type="text" class="form-control" placeholder="ชื่อตำแหน่งงาน" ng-model="criteria.position" ng-keyup="search()">
+							    <input type="text" class="form-control" placeholder="ชื่อตำแหน่งงาน" ng-model="criteria.displayValue" ng-keyup="search()">
 							  </div>
 							  <div class="form-group">
 					                <label style="margin-left: 20px;">สถานะ &nbsp;&nbsp;</label>
 					                <label class="radio-inline">
-					                    <input type="radio" name="userStatus" value="1" ng-model="criteria.status" ng-change="search()">เปิด
+					                    <input type="radio" name="userStatus" value="0" ng-model="criteria.status" ng-change="search()">เปิด
 					                </label>
 					                <label class="radio-inline">
-					                    <input type="radio" name="userStatus" value="0" ng-model="criteria.status" ng-change="search()">ปิด
+					                    <input type="radio" name="userStatus" value="1" ng-model="criteria.status" ng-change="search()">ปิด
 					                </label>
 							   </div>
 							   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">ล้าง</button>
 							</form>
 						</div>
 					</div>
-
-
-
 
 					<div class="table-responsive col-lg-12">
 						<table class="table table-striped table-hover">
@@ -63,7 +59,7 @@
 									</td>
 									<td style="white-space: nowrap">
 									
-										<form editable-form name="rowform" onbeforesave="saveItem($data, data, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == data">
+										<form editable-form name="rowform" onbeforesave="saveAndUpdateItem($data, data, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == data">
 								          <button type="button" ng-disabled="rowform.$waiting" ng-click="data.id == null ? cancel($index) : rowform.$cancel()" class="btn btn-default">
 								            	ยกเลิก
 								          </button>
@@ -80,12 +76,8 @@
 								</tr>
 							</tbody>
 						</table>
-
 						<button class="btn btn-default" ng-click="addItem()">เพิ่มใหม่</button>
 					</div>
-
-
-
 
 				</div>
                 <div class="panel-footer"></div>
