--- a/backend/src/main/webapp/app/views/member_type/add.html
+++ b/backend/src/main/webapp/app/views/member_type/add.html
@@ -3,7 +3,7 @@
 		<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate>
 			<div class="form-group" ng-class="{'has-error':addUserForm.userNameShow.$invalid}">
 				<label class="control-label">ชื่อประเภทสมาชิก *</label>
-				<input name="userNameShow" class="form-control" ng-model="user.userNameShow" ng-change="existingUserShowErrMsg = null" ng-disabled="autoGen" required>
+				<input name="userNameShow" class="form-control" ng-model="user.userNameShow" required>
 			</div>
 			
 			<div class="form-group">
