--- a/backend/src/main/webapp/app/views/member_type/search.html
+++ b/backend/src/main/webapp/app/views/member_type/search.html
@@ -52,8 +52,8 @@
 						<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.status == 1"></i>
 					</td>
 					<td>
-						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteUser(data.id)"></i>&emsp;
-						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="editUser(data)"></i>
+						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.memberTypeId)"></i>&emsp;
+						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="edit(data)"></i>
 					</td>
 				</tr>
 			</tbody>
