--- a/backend/src/main/webapp/app/views/receipt/search.html
+++ b/backend/src/main/webapp/app/views/receipt/search.html
@@ -4,7 +4,7 @@
 		<form class="form-inline">
 		
 			<div class="form-group">
-				<div class="input-group">
+				<div class="input-group" style="width: 180px;">
 					<input type="text" placeholder="ตั้งแต่วันที่" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
 						current-text="{{'datepicker.today' | translate}}"
 						clear-text="{{'datepicker.clear' | translate}}"
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<div class="input-group">
+				<div class="input-group" style="width: 180px;">
 					<input type="text" placeholder="ถึงวันที่" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
 						current-text="{{'datepicker.today' | translate}}"
 						clear-text="{{'datepicker.clear' | translate}}"
