--- a/backend/src/main/webapp/app/views/register/search.html
+++ b/backend/src/main/webapp/app/views/register/search.html
@@ -3,15 +3,15 @@
 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 		<form class="form-inline">
 		  <div class="form-group">
-		    <input type="text" class="form-control" placeholder="ชื่อผู้ลงทะเบียน" ng-model="$parent.formData.memberTypeName" ng-keyup="search()">
+		    <input type="text" class="form-control" placeholder="ชื่อผู้ลงทะเบียน" ng-model="$parent.formData.firstname" ng-keyup="search()">
 		  </div> 
 		  <div class="form-group">
                 <label style="margin-left: 20px;">สถานะ &nbsp;&nbsp;</label>
                 <label class="radio-inline">
-                    <input type="radio" name="status" value="0" ng-model="$parent.formData.status" ng-change="search()">เปิด
+                    <input type="radio" name="isActive" value="0" ng-model="$parent.formData.isActive" ng-change="search()">เปิด
                 </label>
                 <label class="radio-inline">
-                    <input type="radio" name="status" value="1" ng-model="$parent.formData.status" ng-change="search()">ปิด
+                    <input type="radio" name="isActive" value="1" ng-model="$parent.formData.isActive" ng-change="search()">ปิด
                 </label>
 		   </div>
 		   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">ล้าง</button>
@@ -45,9 +45,7 @@
 				<tr>
 					<th>ลำดับที่</th>
 					<th>ชื่อ</th>
-					<th>ประเภทผู้ลงทะเบียน</th>
 					<th>ประเภทสมาชิก</th>
-					<th>ตำแหน่ง</th>
 					<th>สถานะ</th>
 					<th>กระทำ</th>
 				</tr>
@@ -55,13 +53,11 @@
 			<tbody>
 				<tr ng-repeat="data in datas track by $index">
 					<td>{{ $index + 1}}</td>
+					<td>{{ data.firstname }} {{ data.lastname }}</td>
 					<td>{{ data.memberTypeName }}</td>
-					<td></td>
-					<td></td>
-					<td></td>
 					<td>
-						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data.status == 0"></i>
-						<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.status == 1"></i>
+						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data.isActive == 0"></i>
+						<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.isActive == 1"></i>
 					</td>
 					<td>
 						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.memberTypeId)"></i>&emsp;
